# WasmtimeJavaWrapper

./: ReadMe  ReadMe.md
wasm/: WasmtimeWrapper.java
wasm_sql/: WasmtimeWrapper.java
wasmtime_cpp_lib/: CMakeLists.txt  WasmtimeWrapper.cpp  WasmtimeWrapper.h  multiply.c
wasmtime_rust_generic_lib/: Cargo.toml
wasmtime_rust_generic_lib/src/: lib.rs
wasmtime_rust_lib/: Cargo.toml
wasmtime_rust_lib/src/: lib.rs
wasmtime_rust_perf/: Cargo.toml
wasmtime_rust_perf/src/: main.rs
wasmtime_rust_perf/wasm/: Cargo.toml  mult.rs
wasmtime_rust_sql_lib/: Cargo.toml  Makefile
wasmtime_rust_sql_lib/guest/: Cargo.toml
wasmtime_rust_sql_lib/guest/src/: lib.rs
wasmtime_rust_sql_lib/host/: Cargo.toml
wasmtime_rust_sql_lib/host/src/: main.rs
wasmtime_rust_sql_lib/jni_wrapper/: Cargo.toml
wasmtime_rust_sql_lib/jni_wrapper/src/: lib.rs
wasmtime_rust_sql_lib/perf_test/: Cargo.toml
wasmtime_rust_sql_lib/perf_test/src/: main.rs
wasmtime_rust_sql_lib/sql_udf/: Cargo.toml
wasmtime_rust_sql_lib/sql_udf/src/: lib.rs
wasmtime_rust_sql_lib/wits/: sql.wit
