[package]
name = "wasmtime_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
wasmtime = "1.0.0"
anyhow = { version = "1.0", default-features = false }

[lib]
crate_type = ["cdylib"]
